<resources>
    <string name="app_name">ImoocMusic</string>
    <string name="nav_title">慕课音乐</string>
    <string name="text_describe">back</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="original_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">请确认密码</string>
    <string name="confirm_modify_password">确认修改</string>
    <string name="text_register">立即注册</string>
    <string name="btn_login">登  录</string>
    <string name="btn_register">注  册</string>
    <string name="validate_phone">手机号码无效</string>
    <string name="validate_password">密码不能为空</string>
    <string name="twice_pass_wrong">两次密码输入不一致</string>
    <string name="pass_not_null">密码不能为空</string>
    <string name="register_success">注册成功，请登录！</string>
    <string name="user_name">当前用户名:</string>
    <string name="modify_pass">修改密码</string>
    <string name="user_logout">退出登录</string>
    <string name="personal_center">个人中心</string>
    <string name="recommend_list">推荐歌单</string>
    <string name="hottest_list">最热音乐</string>
    <string name="ablum_list">专辑歌单</string>
    <string name="list_music_author">歌手名字</string>
    <string name="list_music_name">歌曲名称</string>
    <string name="listen_num">600万</string>
    <string name="grid_list_name">歌单名称</string>
</resources>
