<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PersonalActivity">

    <include layout="@layout/nav_bar" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/user_name"
        android:textSize="@dimen/middleSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/modify_pass"
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onModifyPassword"
        android:text="@string/modify_pass" />

    <Button
        android:id="@+id/user_logout"
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onLogout"
        android:text="@string/user_logout" />
</LinearLayout>