<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ModifyPasswordActivity">

    <include layout="@layout/nav_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:src="@mipmap/ic_logo" />

    <com.qjh.imoocmusic.customwidget.InputView
        android:id="@+id/original_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_hint="@string/original_password_hint"
        app:input_icon="@mipmap/ic_password"
        app:is_password="true" />

    <View style="@style/line"/>

    <com.qjh.imoocmusic.customwidget.InputView
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_hint="@string/new_password_hint"
        app:input_icon="@mipmap/ic_password"
        app:is_password="true" />

    <View style="@style/line"/>

    <com.qjh.imoocmusic.customwidget.InputView
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        app:input_hint="@string/confirm_password_hint"
        app:input_icon="@mipmap/ic_password"
        app:is_password="true" />

    <View style="@style/line"/>

    <Button
        android:id="@+id/confirm_modify_btn"
        style="@style/commitBtn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="doModifyPassword"
        android:text="@string/confirm_modify_password" />
</LinearLayout>